fix alignment on token stats

--- a/css/explorer.css
+++ b/css/explorer.css
@@ -609,7 +609,7 @@ footer #logo {
     padding: 0.3rem;
     font-size: 1.1rem;
 }
-#token-stats-table td {
+#token-stats-table tbody td {
     text-align:right;
 }
 
